--- a/src/pages/Landing/Hero/HeroSection.css
+++ b/src/pages/Landing/Hero/HeroSection.css
@@ -1,5 +1,5 @@
 .hero_section {
-  padding-top: 10%;
+  padding-top: 5%;
   height: 100vh;
   display: flex;
 }
@@ -16,10 +16,18 @@
 
 .hero_title {
   margin: 5%;
-  color: var(--accent);
+  color: var(--visited);
   font-size: var(--font-size-xxmammoth);
-  font-family : var(--primary-font);
-  font-weight : var(--font-weight-bolder);
+  font-family: var(--primary-font);
+  font-weight: var(--font-weight-bolder);
+}
+
+.hero-title-span {
+  color: var(--accent);
+  font-size: var(--font-size-dinormous);
+  font-family: var(--cta-font);
+  font-weight: var(--font-weight-bolder);
+  text-transform: uppercase;
 }
 
 .hero_para_container {
@@ -27,16 +35,14 @@
   border-top: none; /* Hide the top border */
   border-right: none; /* Hide the left border */
   margin: 5%;
-  height: 100%;
+  /* height: 100%; */
   padding: 5%;
 }
 
 .hero_para {
   font-size: var(--font-size-xlarge);
-  font-family : var(--secondary-font);
+  font-family: var(--secondary-font);
   text-align: justify;
-
-
 }
 
 .hero_para,
@@ -49,21 +55,21 @@
   height: 32%;
   font-size: var(--font-size-xlarge);
   font-weight: var(--font-weight-bold);
-  font-family : var(--cta-font);
+  font-family: var(--cta-font);
   border: 2px solid var(--background);
   cursor: pointer;
   border-radius: 5px;
   transition: all 0.5s ease-in-out;
   background-color: var(--secondary);
-  color: var(--text);
+  color: var(--accent);
+  border: 2px solid var(--accent);
+  background-color: var(--background);
 }
 
 .hero-cta-btn:hover {
-  color: var(--accent);
-
-  border: 2px solid var(--accent);
   background-color: var(--background);
   transition: all 0.5s ease-in-out;
+  scale : 1.01;
 }
 
 /* 
