--- a/src/pages/Landing/Feat/FeatureSection.css
+++ b/src/pages/Landing/Feat/FeatureSection.css
@@ -42,7 +42,7 @@
 .middle-feat-line {
   width: 5px;
   height: 800px;
-  background-color: white;
+  background-color: var(--accent);
 }
 
 .feat-left {
@@ -111,6 +111,12 @@
     width: 450px;
     height: 240px;
   }
+  .content > h2 {
+    font-size: var(--font-size-xlarge);
+  }
+  .para {
+    font-size: var(--font-size-medium);
+  }
 }
 
 @media (max-width: 850px) {
@@ -118,14 +124,24 @@
     font-size: var(--font-size-xhuge);
     letter-spacing: 1.5rem;
   }
+
+ 
 }
 
 @media (max-width: 600px) {
   .feats {
-    width: 300px;
+    height: 300px;
+    width: 350px;
   }
   .feat-title {
     font-size: var(--font-size-xhuge);
     letter-spacing: 0.7rem;
+  }
+
+  .content > h2 {
+    font-size: var(--font-size-xlarge);
+  }
+  .para {
+    font-size: var(--font-size-normal);
   }
 }
