--- a/src/pages/Landing/Footer/footer.css
+++ b/src/pages/Landing/Footer/footer.css
@@ -13,6 +13,18 @@
 
 .footer-wrapper {
   background-color: var(--secondary);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.footer{
+  padding: 1rem;
+  margin : 3rem;
+  width: 80%;
+  border-radius: 20px;
+  background-color: var(--background);
 }
 
 /* styles for the footer mid section */
@@ -24,12 +36,12 @@
   margin-top: 10%;
   align-items: center;
 }
-
 .listas {
   list-style-type: none;
   font-size: var(--font-size-medium);
   font-family: var(--cta-font);
 }
+
 
 .list {
   margin-bottom: 5%;
