(auth-navs) : made a link which will be able to navigate the user to the landing page again

--- a/src/Auth/login.css
+++ b/src/Auth/login.css
@@ -13,7 +13,7 @@
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: center;
+  align-content: flex-end;
 }
 
 .login-form {
@@ -23,8 +23,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 25px;
-  height: 90vh;
-  width: 65%;
+  height: 80vh;
+  width: 60%;
   margin: 1.5rem;
   box-shadow: 0 12px 24px var(--background);
 
@@ -77,4 +77,16 @@
   border-radius: 5px;
   color: var(--text);
   font-family: var(--form-font);
+}
+
+.logo-title-login{
+  font-size: 2.5em;
+  font-family: var(--cta-font);
+  color: var(--accent);
+  margin-top: 1rem;
+  position : absolute;
+  top: 0;
+  left: 0;
+  margin-left: 3rem;
+
 }
