--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .wrapper {
   top: 0;
+  /* position: absolute; */
   width: 100%;
   margin-top: 1%;
 }
@@ -9,6 +10,7 @@
   align-items: center;
   justify-content: space-around;
   width: 100%;
+  height: 10vh;
   z-index: 100;
 }
 
@@ -18,7 +20,7 @@
   justify-content: flex-start;
   align-items: flex-end;
   flex-wrap: wrap;
-  font-family : var(--form-font)
+  font-family : var(--form-font);
 }
 
 .MyLogo {
