--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,3 +1,13 @@
+.nothing-here-container{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 88vh;
+    width: 100%;
+    flex-direction: column;
+}
+
+
 .nothing-here-wrapper{
     display: flex;
     justify-content: center;
