(addResources) :  done with the styling of the css

--- a/src/components/addResources.css
+++ b/src/components/addResources.css
@@ -9,12 +9,19 @@
   margin-right: 7rem;
   background-color: var(--secondary);
   cursor: pointer;
+  transition: all 0.5s ease;
+}
+
+.btn-wrapper:hover {
+  transition: all 0.5s ease;
+  background-color: var(--background);
+  border-color: var(--accent);
 }
 
 .add-btn {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   height: 2rem;
   width: 6rem;
   margin: 1rem 1.5rem;
@@ -22,8 +29,7 @@
   font-weight: var(--font-weight-bolder);
   font-size: var(--font-size-xlarge);
   font-family: var(--cta-font);
+  transition: color 0.5s ease;
 }
 
-.add-btn > span {
-  font-size: var(--font-size-mammoth);
-}
+
