--- a/src/components/addResources.css
+++ b/src/components/addResources.css
@@ -32,4 +32,50 @@
   transition: color 0.5s ease;
 }
 
+.addResource-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: stretch;
+}
 
+.drop-down {
+  position: absolute;
+  height: 10rem; /* Adjust as needed */
+  width: 20rem; /* Adjust as needed */
+  top: 18rem; /* Adjust as needed */
+  left: 89.4rem;
+  background-color: var(--secondary);
+  border: 1px solid var(--visited);
+  border-radius: 15px;
+  padding: 1rem;
+  z-index: 1000; /* Ensure it appears above other elements */
+  transition: all 0.5s ease;
+}
+
+
+.create-module,
+.add-link,
+.upload {
+  padding: 0.5rem 0;
+  border-radius: 8px;
+  transition: background-color 0.5s ease;
+}
+
+.create-module-title,
+.add-link-title,
+.upload-title {
+  font-size: var(--font-size-large);
+  cursor: pointer;
+  margin-left: 1rem;
+  transition: color 0.5s ease;
+  font-family: var(--cta-font);
+  font-weight: var(--font-weight-bolder);
+}
+
+.create-module:hover,
+.add-link:hover,
+.upload:hover {
+  background-color: var(--background);
+  transition: background-color 0.5s ease;
+}
