--- a/src/components/addResources.css
+++ b/src/components/addResources.css
@@ -53,13 +53,21 @@
   transition: all 0.5s ease;
 }
 
-
 .create-module,
 .add-link,
 .upload {
   padding: 0.5rem 0;
   border-radius: 8px;
   transition: background-color 0.5s ease;
+  display: flex;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.create-module > img,
+.add-link > img,
+.upload > img {
+  margin-left: 1rem;
 }
 
 .create-module-title,
@@ -76,6 +84,6 @@
 .create-module:hover,
 .add-link:hover,
 .upload:hover {
+  opacity: 1;
   background-color: var(--background);
-  transition: background-color 0.5s ease;
 }
