(home-page) : made the home page responsive

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -228,3 +228,22 @@
     color: black;
   }
 }
+
+
+@media (max-width: 600px){
+  .app-name {
+    font-size: var(--font-size-xlarge);
+  }
+}
+
+@media (max-width: 500px){
+  .app-name {
+    font-size: var(--font-size-medium);
+  }
+}
+
+@media (max-width: 400px){
+  .app-name {
+    font-size: var(--font-size-small);
+  }
+}
