--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,6 +1,3 @@
-
-
-
 .nothing-here-container {
   display: flex;
   justify-content: center;
@@ -62,7 +59,6 @@
   }
 }
 
-
 @media (max-width: 950px) {
   .nothing-here-svg {
     width: 15rem;
@@ -78,5 +74,13 @@
 }
 
 @media (max-width: 500px) {
+  .nothing-here-title {
+    font-size: var(--font-size-medium);
+  }
+
+  .nothing-here-para {
+    font-size: var(--font-size-tiny);
+  }
+
   
 }
