--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -37,8 +37,7 @@
   filter: drop-shadow(0 0 15px var(--secondary));
 }
 
-/* media queries for the responsiveness */
-
+/* Media Queries for Responsiveness */
 @media (max-width: 1680px) {
   .nothing-here-svg {
     width: 20rem;
@@ -81,6 +80,4 @@
   .nothing-here-para {
     font-size: var(--font-size-tiny);
   }
-
-  
 }
